Add SHIELD_EXPORTER_METRICS_ENVIRONMENT env var to CF manifest file

--- a/manifest.yml
+++ b/manifest.yml
@@ -7,3 +7,4 @@ applications:
       SHIELD_EXPORTER_SHIELD_BACKEND_URL: "Your Shield Backend URL"
       SHIELD_EXPORTER_SHIELD_USERNAME: "Your Shield Username"
       SHIELD_EXPORTER_SHIELD_PASSWORD: "Your Shield Password"
+      SHIELD_EXPORTER_METRICS_ENVIRONMENT: "Environment label to be attached to metrics"
